== master

* 1 minor enhancement
  * Switched dependency on ActiveSupport out for the lighter-weight Extlib

== 1.0.4 / 2008-11-17

* 4 minor enhancements
  * Updated array traversal code to be recursive by default
  * Updated visitor code to use class instances instead of class-level methods for greater flexibility
  * Updated error handling to include parsing context in error message
  * Added clone method for deep copy of AST
  * Updated node building to set node parents for easier traversal of the AST

== 1.0.0 / 2008-06-29

* 1 major enhancement
  * Birthday!