@@ -1,7 +1,8 @@
 == master
 
-* 1 minor enhancement
+* 2 minor enhancements
   * Switched dependency on ActiveSupport out for the lighter-weight Extlib
+  * Updated array_of to remove recursive flag and add support for extracting more than one kind of node
 
 == 1.0.4 / 2008-11-17
 
